# rust-sql-orm-demo

./: .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yml  init.sql
collection/: create-person.posting.yaml  list-people.posting.yaml
migrations/2025-07-03-201706_create_person/: up.sql
migrations/2025-07-03-201757_create_post/: up.sql
src/: conn.rs  main.rs  model.rs  people.rs  schema.rs
