[package]
name = "here"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["postgres", "chrono"] }
dotenv = "0.15"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
